# chatbot_ia_assistent

./: .gitignore  LICENSE  README.md  app.py  bot.py  create_database.py  create_db.py  database.py  database_manager.py  main.py  messages.py  populate_db.sql  pyproject.toml  requirements.txt  run.py  setup.py  test_db.py  test_env.py  usuarios.db
.github/workflows/: ci.yml
docs/: README.md
src/bot/: __init__.py  ai_agent.py  ai_assistant.py  bot_handlers.py  bot_services.py  create_database.py  database_manager.py  factory.py  history_manager.py  llm_config.py  llm_service.py  main.py  slot_filling_manager.py  telegram_handlers.py
src/bot/core/: ambiguity_resolver.py
src/bot/extraction/: slot_filler.py
src/config/: __init__.py  logger.py  settings_loader.py
src/database/: base.py  create_database.py  session.py
src/database/models/: __init__.py  agenda_model.py  historico_model.py  mensagem_model.py  servico_model.py  session_model.py  user_model.py
src/database/repositories/: __init__.py  agenda_repo.py  base_repo.py  historico_repo.py  mensagem_repo.py  mensagem_repository.py  servico_repo.py  servico_repository.py  session_repo.py  user_repo.py
src/prompts/router/: classification_router.py  general_chat_prompt.txt  general_welcome_prompt.txt  router_system_prompt.txt  (+2 more)
src/schemas/: intencao_schema.py  router_schema.py  slot_extraction_schema.py
src/services/: appointment_service.py  appointment_validator.py  data_service.py  dialog_flow_service.py  persistence_service.py  scheduler_service.py  service_finder.py  slot_processor_service.py
src/tools/: available_tools.py
src/utils/: __init__.py  constants.py  date_parser.py  helpers.py  json_utils.py  logger.py  messages.py  system_message.py
tests/: test_db.py  test_env.py
tests/integration/: test_create_db_integration.py
tests/unit/: test_ai_agent_mock.py  test_create_db_mock.py
(+4 files in other folders)
